prueba de links

--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="logo">Guía Turística</div>
         <div class="links">
-            <a href="#">Inicio</a>
+            <a href="#objeto1">Inicio</a>
             <a href="#">Sitios Turísticos</a>
             <a href="#">Tradiciones</a>
             <a href="#">Cultura</a>
@@ -78,7 +78,7 @@
         </div>
     </section>
     
-    <section class="mision">
+    <section class="mision" id="objeto1">
         <div class="mision-box">
             <h2>Misión, visión y valores</h2>
             <p><strong>Misión:</strong> Nuestra misión es promover y preservar la riqueza cultural y turística de San Pedro de Macorís, ofreciendo a los visitantes una experiencia única que resalte su historia, tradiciones y atractivos.</p>
