slider e informacion 6to electronica

--- a/Home.html
+++ b/Home.html
@@ -90,7 +90,7 @@
     </section>
     <section class="tradiciones" id="Tradiciones">
         <h2>Tradiciones y culturas</h2>
-        <p>Descubre la esencia vibrante de San de Macorís, donde las tradiciones y culturas se entrelazan en un abrazo eterno.</p>
+        <p>Descubre la esencia vibrante de San Pedro de Macorís, donde las tradiciones y culturas se entrelazan en un abrazo eterno.</p>
         <div class="tradiciones-grid">
             <img src="images/Gaga-4.jpg" alt="Cultura 1" class="Imagen">
             <img class="Imagen" src="images/Presentación del Teatro Cocolo Danzante de los Guloyas de San Pedro de Macorís 2.jpeg" alt="Cultura 2">
@@ -111,6 +111,10 @@
     </section>
 
     <section class="carousel" aria-label="Gallery">
+        <div class="titulo-carousel">
+            <h2>Artesanías, Creencias y Festividades </h2>
+        </div>
+        <div>
         <ol class="carousel__viewport">
           <li id="carousel__slide1" tabindex="0" class="carousel__slide">
             <div class="carousel__snapper"></div>
@@ -133,7 +137,7 @@
             <a href="#carousel__slide1" class="carousel__next">Next</a>
           </li>
         </ol>
-        
+    </div>  
         <aside class="carousel__navigation">
           <ol class="carousel__navigation-list">
             <li class="carousel__navigation-item">
